# embedding-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  errors.py  main.py  schemas.py
app/api/: embeddings.py  models.py  system.py
app/backends/: __init__.py  base.py  fake_backend.py  sentence_transformer_backend.py
app/services/: embedding_service.py  model_registry.py  text_preprocessor.py
app/utils/: device.py  logging.py  timing.py
deploy/: docker-compose.example.yml  docker-compose.gpu.example.yml  watchtower.example.yml
docker/: Dockerfile
docs/: api.md  contract.md  deployment.md  gpu-deployment.md  local-dev.md  local-docker-deployment.md
scripts/: smoke_test.py
tests/: conftest.py  test_contract_compatibility.py  test_device.py  test_embeddings_fake.py  test_models.py  test_real_model.py  test_system.py  test_text_preprocessor.py  test_validation.py
